syntax = "proto3";
package protobuf;

option go_package = "vastlex/plugin/actions/protobuf";

message KickAction {
  string xuid = 1;
  repeated string reason = 2;
}