syntax = "proto3";
package protobuf;

option go_package = "vastlex/plugin/actions/protobuf";

message LogAction {
  enum Type {
    Info = 0;
    Debug = 1;
    Warn = 2;
    Error = 3;
    Fatal = 4;
    Title = 5;
  }
  Type type = 1;
  string message = 2;
  repeated string sources = 3;
}