syntax = "proto3";
package protobuf;

option go_package = "vastlex/plugin/actions/protobuf";

message SetDebugAction {
  bool debug = 1;
}