syntax = "proto3";
package protobuf;

option go_package = "vastlex/plugin/actions/protobuf";

message SetMotdAction {
  string motd = 1;
}